Add viewHandler using templates

--- a/src/webapp/templates/index.html
+++ b/src/webapp/templates/index.html
@@ -3,10 +3,12 @@
 </head>
 <body>
     <div>
-            <h1>
-                <br>
-                Test template
-                <hr>
-            </h1>
+            <h1>Task List</h1>
+            <ul>
+                <li>Emails follow up</li>
+                <li>Book tickets</li>
+                <li>Office work</li>
+                <li>Meet Sam</li>
+            </ul>
     </div>
 </body>
